# ai-copilot-agent-intern

backend/: .gitignore  README.md  copilot.db  database.py  main.py  pyproject.toml  requirements.txt  run.py
backend/docker/: Dockerfile  docker-compose.yml  nginx.conf
backend/middleware/: logging.py  rate_limiting.py  security.py
backend/routers/: auth.py  chat.py  integrations.py  tasks.py
backend/services/: auth_service.py  google_service.py  jira_service.py  llm_service.py
backend/tests/: test_auth.py  test_chat.py
backend/utils/: error_handler.py  health_check.py
frontend/: .env.example  improve.txt  imrpve.txt  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  IntegrationCard.tsx  LoginPage.tsx  Message.tsx  QuickActions.tsx  ShadcnSidebar.tsx  Sidebar.tsx  TaskAnalysis.tsx  TaskList.tsx  TaskSummary.tsx  TypingIndicator.tsx  WeeklySummary.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx  IntegrationsContext.tsx
frontend/src/services/: api.ts
